The Samba-Bugzilla – Bug 11612
winbind crashes with invalid idmap configs
Last modified: 2015-11-24 08:37:15 UTC
Patch to follow
Created attachment 11607 [details] Patch
Comment on attachment 11607 [details] Patch I'll update with a fresh patch soon that contains the cherry-picked from
Created attachment 11608 [details] Patch
Comment on attachment 11608 [details] Patch LGTM.
Re-assigning to Karolin for inclusion in release branches.
Pushed to autobuild-v4-3-test.
(In reply to Karolin Seeger from comment #6) Pushed to v4-3-test. Closing out bug report. Thanks!